--- a/index.html
+++ b/index.html
@@ -18,7 +18,7 @@
 
 
   <nav class="navbar">
-    <h2 class="logo"><a href="index.html"><img src="syncra_log.png" alt="" height="50px" width=""></a></h2>
+    <h2 class="logo"><a href="index.html"><img src="Syncra_log.png" alt="" height="50px" width=""></a></h2>
     <ul class="nav-links">
       <li><a href="#" class="active">Net32 Shipping</a></li>
       <li><a href="pricing.html">Pricing</a></li>
