--- a/calculator.html
+++ b/calculator.html
@@ -112,12 +112,12 @@ button:hover {
         </div>
         
         <div class="form-group">
-            <label for="promotionCases">Cases to Buy (Before Promotion):</label>
+            <label for="promotionCases">Quantity to buy (BOXES) for Promotions:</label>
             <input type="number" id="promotionCases" placeholder="Enter the number of cases you want to buy" value="7">
         </div>
         
         <div class="form-group">
-            <label for="freeCases">Free Cases:</label>
+            <label for="freeCases">Free Boxes you get with Promotion</label>
             <input type="number" id="freeCases" placeholder="Enter the number of free cases you get" value="3">
         </div>
 
